Implement JSON-RPC 2.0 message handling with error management and summarization functionality